--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="productos.json"></script>
   <link rel="stylesheet" href="style.css">
   <title>Guitarras Marrocchi</title>
 
@@ -99,7 +100,7 @@
               <div class="card-body">
                 <h5 class="card-title">Guitarra Criolla La Alpujarra</h5>
                 <p class="card-text">70.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -114,7 +115,7 @@
               <div class="card-body">
                 <h5 class="card-title">Guitarra Criolla Midiplus</h5>
                 <p class="card-text">180.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -126,9 +127,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Criolla La Alpujarra</h5>
-                <p class="card-text">30.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Criolla Takamine</h5>
+                <p class="card-text">40.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -152,8 +153,8 @@
               <hr>
               <div class="card-body">
                 <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <p class="card-text">125.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -166,8 +167,8 @@
               <hr>
               <div class="card-body">
                 <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <p class="card-text">170.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -180,8 +181,8 @@
               <hr>
               <div class="card-body">
                 <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <p class="card-text">85.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -202,9 +203,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Electroacustica Cort</h5>
+                <p class="card-text">90.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -216,9 +217,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Electroacustica Mahogany</h5>
+                <p class="card-text">75.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -230,9 +231,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Electroacustica Sigma</h5>
+                <p class="card-text">145.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -253,9 +254,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Electrica Epiphone</h5>
+                <p class="card-text">250.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -267,9 +268,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Electrica Ibanez</h5>
+                <p class="card-text">375.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -281,9 +282,9 @@
                 class="card-img-top mx-auto card-image" alt="...">
               <hr>
               <div class="card-body">
-                <h5 class="card-title">Guitarra Acustica Cort</h5>
-                <p class="card-text">120.000$</p>
-                <a href="#" class="btn btn-primary ml-auto">Comprar</a>
+                <h5 class="card-title">Guitarra Electrica Tagima</h5>
+                <p class="card-text">100.000$</p>
+                <a href="#" class="btn btn-primary ml-auto">Agregar al carrito</a>
               </div>
             </div>
           </div>
